# massaction

./: LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: lint.yml  test.yml
demos/acid-base/: acid_dissociation.py  acid_dissociation_water_autoprotolysis.py  water_autoprotolysis.py
demos/defect-chemistry/: schottky_disorder.py  vacancies_electrons_holes.py
massaction/: constraint.py  model.py  reaction.py  species.py
tests/: test_constraint.py  test_model.py  test_reaction.py  test_species.py
