[project]
name = "massaction"
version = "0.0.1"
authors = [
  { name="Adrian L. Usler", email="adrian.usler@rwth-aachen.de" },
]
description = "Numerical solution of mass-action laws"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/adrianusler/massaction"
Issues = "https://github.com/adrianusler/massaction/issues"