[project]
name = "massaction"
authors = [
  { name="Adrian L. Usler", email="adrian.usler@rwth-aachen.de" },
]
description = "Numerical solution of mass-action laws"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy~=1.22",
    "scipy>=1.7.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = {file = "LICENSE"}
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/adrianusler/massaction"
Issues = "https://github.com/adrianusler/massaction/issues"

[build-system]
requires = ["numpy", "scipy", "setuptools>=65", "wheel", "twine"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {"attr" = "massaction.__version__"}

[tool.setuptools.packages.find]
where = ["massaction"]  # list of folders that contain the packages (["."] by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)
